[package]
name = "pi-duplicates"
version = "0.1.0"
authors = ["emerald"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atoi = "0.4.0"
memmap = "0.7.0"
bitvec = "0.20.1"
once_cell = "1.5.2"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
